MenuStatistics 오류 수정